--- a/webroot/css/graphic.css
+++ b/webroot/css/graphic.css
@@ -2,11 +2,13 @@
   margin: 10px;
 }
 #DatePicker {
-  margin-top: 20px;
   margin-bottom: -5px;
 }
 #DatePicker #FromDate {
   margin-right: 8px;
+}
+#DatePicker .input-group {
+  margin-top: 10px;
 }
 #DatePicker input {
   background-color: #302e2e;
